# sb5-docker-test

./: .gitignore  Dockerfile  README.md  bkp_Dockerfile  compose.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
tests/: test_data.py  test_yt_dlp.py
